--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^3.18.0",
     "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
+    "node-logger": "0.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
